[package]
name = "yew_styles_dont_apply_minimal_example"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4"
yew = { git = "https://github.com/yewstack/yew", branch="master" }
